fixed z-index anime bug

--- a/react-app/src/components/Lists/Lists.module.css
+++ b/react-app/src/components/Lists/Lists.module.css
@@ -75,10 +75,6 @@
   z-index: 1;
 }
 
-.anime > *:active {
-  z-index: -2;
-}
-
 .anime_header {
   background-color: #4065ba;
   display: flex;
